--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+2022-07-13  Ryan Goldberg  <rgoldber@redhat.com>
+
+	* debuginfod-client-config.7: Document DEBUGINFOD_IMA_POLICY and
+	DEBUGINFOD_IMA_CERT_PATHS.
+
 2022-06-03  Michael Trapp <michael.trapp@sap.com>
 
 	* debuginfod.8 (--disable-source-scan): Document.
