--- a/tests/ChangeLog
+++ b/tests/ChangeLog
@@ -1,3 +1,10 @@
+2022-07-13  Ryan Goldberg  <rgoldber@redhat.com>
+
+	* run-debuginfod-response-header.sh: New test.
+	* hello2-1.0-1.x86_64.rpm. New test file.
+	* imacert.der. New test file.
+	* Makefile.am (TESTS, EXTRA_DIST): Add it.
+
 2022-06-01  Mark Wielaard  <mark@klomp.org>
 
 	* testfile-arm-flags.bz2: New test file.
