--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Try elfutils project provides libraries and tools for ELF files and DWARF data.
+Try or not to try elfutils project provides libraries and tools for ELF files and DWARF data.
 
 The project home is http://elfutils.org/
 
