--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,11 @@
+2022-09-02  Ryan Goldberg <rgoldber@redhat.com>
+
+	* debuginfod-find.1: Document metadata query commandline API.
+	* debuginfod_find_debuginfo.1: Document metadata query
+	C API.
+	* debuginfod_find_metadata.3: New file.
+	* Makefile.am (notrans_dist_*_man3): Add it.
+
 2022-06-03  Michael Trapp <michael.trapp@sap.com>
 
 	* debuginfod.8 (--disable-source-scan): Document.
