--- a/doc/debuginfod-find.1
+++ b/doc/debuginfod-find.1
@@ -29,6 +29,8 @@ debuginfod-find \- request debuginfo-related data
 .B debuginfod-find [\fIOPTION\fP]... source \fIBUILDID\fP \fI/FILENAME\fP
 .br
 .B debuginfod-find [\fIOPTION\fP]... source \fIPATH\fP \fI/FILENAME\fP
+.br
+.B debuginfod-find [\fIOPTION\fP]... metadata \fIGLOB\fP
 
 .SH DESCRIPTION
 \fBdebuginfod-find\fP queries one or more \fBdebuginfod\fP servers for
@@ -105,6 +107,21 @@ l l.
 /path/to/foo.c	source BUILDID /path/to/foo.c
 \../bar/foo.c AT_comp_dir=/zoo/	source BUILDID /zoo//../bar/foo.c
 .TE
+
+.SS metadata \fIGLOB\fP
+
+If the given path, which may be globbed, is known to the server,
+this request will result in a json string being written to
+\fBstdout\fP. The result will consist of a json array, with one
+json object for each matching file's metadata. The result can be piped
+into \fBjq\fP for easy processing. On failure, an empty array is written
+as the output. Unlike finding by buildid no new file will be created or cached.
+
+For a given file's metadata, the result is guaranteed to contain, \fBatype\fP
+(the atrifact type), \fBbuildid\fP, \fBmtime\fP (time of last data modification,
+seconds since Epoch), \fBstype\fP (the sourcetype), \fBsource0\fP (the path to
+the file in the local filesystem), \fBsource1\fP (the path which is being globbed against).
+Extra fields and duplicated metadata may appear.
 
 .SH "OPTIONS"
 
