--- a/doc/debuginfod_find_debuginfo.3
+++ b/doc/debuginfod_find_debuginfo.3
@@ -43,6 +43,9 @@ LOOKUP FUNCTIONS
 .BI "                           int " build_id_len ","
 .BI "                           const char *" filename ","
 .BI "                           char ** " path ");"
+.BI "int debuginfod_find_metadata(debuginfod_client *" client ","
+.BI "                           const char *" path ","
+.BI "                           char** " metadata ");"
 
 OPTIONAL FUNCTIONS
 
@@ -108,6 +111,12 @@ A \fBclient\fP handle should be used from only one thread at a time.
 A handle may be reused for a series of lookups, which can improve
 performance due to retention of connections and caches.
 
+.BR debuginfod_find_metadata (),
+likewise queries the debuginfod server URLs contained in
+.BR $DEBUGINFOD_URLS
+but instead retrieves metadata. The given \fIpath\fP may contained
+the standard glob characters.
+
 .SH "RETURN VALUE"
 
 \fBdebuginfod_begin\fP returns the \fBdebuginfod_client\fP handle to
@@ -117,7 +126,11 @@ use with all other calls.  On error \fBNULL\fP will be returned and
 If a find family function is successful, the resulting file is saved
 to the client cache and a file descriptor to that file is returned.
 The caller needs to \fBclose\fP() this descriptor.  Otherwise, a
-negative error code is returned.
+negative error code is returned. The one excpetion is \fBdebuginfod_find_metadata\fP
+which likewise returns negative error codes, but on success returns 0
+and sets \fI*metadata\fP to a string-form json array of the found matching
+metadata. This should be freed by the caller. See \fIdebuginfod-find(1)\fP for 
+more information on the metadata being returned.
 
 .SH "OPTIONAL FUNCTIONS"
 
