Fixes building with msvc/clang mingw/gcc
Add vsocde settings and cmake build files

Signed-off-by: Yonggang Luo <luoyonggang@gmail.com>

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ git clone git://sourceware.org/git/elfutils.git
 
 To build a git checkout do:
   autoreconf -i -f && \
-  ./configure --enable-maintainer-mode && \
+  ./configure --enable-maintainer-mode --disable-debuginfod --disable-libdebuginfod --disable-symbol-versioning && \
   make && make check
 
 The developer mailinglist to send patches to is
