ignore build directory
This is for in in three building and won't affect IDE
for example
mkdir build && cd build && ../configure && make install

Signed-off-by: Yonggang Luo <luoyonggang@gmail.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2022-12-17  Yonggang Luo <mark@klomp.org>
+
+	* .gitignore: Ignore build directory
+
 2022-11-02  Mark Wielaard  <mark@klomp.org>
 
 	* configure.ac (AC_INIT): Set version to 0.188.
